# AgentIM

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  ImplicitContractDefense.md  README.md  docker-compose.yml  install.sh
.claude/skills/rust-db-contracts/references/: check_db_contracts.sh
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: client.rs  config.rs  identity.rs  listen.rs  main.rs
docs/: v0.1-prd.md  v0.2-prd.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/api/: client.ts  constants.generated.ts  types.generated.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/agent/: agent-detail-client.tsx  page.tsx
frontend/src/app/agent/[id]/: agent-detail-client.tsx  page.tsx
frontend/src/app/channel/: channel-detail-client.tsx  page.tsx
frontend/src/app/channel/[id]/: channel-detail-client.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: agent-card.tsx  auth-events.tsx  chat-message.tsx  chat-panel.tsx  claim-code-dialog.tsx  contact-list.tsx  create-agent-dialog.tsx  nav-bar.tsx
frontend/src/lib/: use-auth.ts
scripts/: check-contracts.sh  check.sh  dev.sh
server/: Cargo.toml
server/src/: config.rs  consts.rs  db.rs  error.rs  frontend.rs  main.rs  risk.rs  ws.rs
server/src/api/: agents.rs  auth.rs  channels.rs  contacts.rs  credentials.rs  dto.rs  messages.rs  mod.rs
server/src/auth/: extractor.rs  token.rs
server/src/entity/: agent.rs  agent_credential.rs  auth_event.rs  channel.rs  channel_member.rs  claim_token.rs  contact.rs  message.rs  message_read.rs  mod.rs  user.rs
server/src/raw_sql/: fts.rs  read-before-write.md
