[package]
name = "agentim-cli"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "agentim"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
anyhow = "1"
colored = "3"
futures-util = "0.3"
chrono = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core", "pem"] }
base64 = "0.22"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
